<resources>
    <string name="app_name">gank_kotlin</string>
    <string name="title_home">首页</string>
    <string name="title_category">分类</string>
    <string name="title_girl">妹纸</string>

    <string name="title_my">我的</string>
    <string name="about">关于</string>
    <string name="issue_pr">提Issue/PR</string>
    <string name="star">点个Star</string>
    <string name="clean">清理缓存</string>
    <string name="clean_favorites">清理收藏</string>
    <string name="github_login">GitHub帐号登录</string>

    <string name="versionName">当前版本V%1$s</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_login">登录</string>
    <string name="dialog_login">正在登录</string>
    <string name="loading">正在加载</string>
    <string name="txt_refresh_view">点击刷新</string>
    <string name="dialog_left_txt">取消</string>
    <string name="dialog_title">温馨提示</string>
    <string name="dialog_message_username">请输入用户名</string>
    <string name="dialog_message_password">请输入密码</string>
    <string name="dialog_right_txt">确定</string>
</resources>